my head is spinning like a screw; added create task handler; fucking sql I hate it
