# docs/swagger.yaml
@@ -163,6 +163,26 @@ definitions:
       status:
         type: string
     type: object
+  model.TaskCreateRequest:
+    properties:
+      description:
+        description: Description - is verbose info about task. Could be any string.
+        type: string
+      group:
+        description: Group - optional filed that show group to which task will be
+          related.
+        type: string
+      name:
+        description: Name is name of task.
+        type: string
+      users:
+        description: |-
+          Users - field which relating users to task.
+          If not defined, will create task only for user, who creates this task or for group.
+        items:
+          type: string
+        type: array
+    type: object
   model.User:
     properties:
       email:
@@ -401,6 +421,48 @@ paths:
           schema:
             $ref: '#/definitions/model.Error'
       summary: Get user tasks.
+      tags:
+      - Tasks
+  /tasks/:
+    post:
+      consumes:
+      - application/json
+      operationId: create_task
+      parameters:
+      - description: task
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.TaskCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Task'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/model.Error'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/model.Error'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/model.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Error'
+      summary: Create task.
       tags:
       - Tasks
   /tasks/{task_id}:
